cabal-version:       2.4

name:                simplemd
version:             0.1.0.0
synopsis:            A simple Markdown editor, written in Haskell.
bug-reports:         https://github.com/stone-zeng/simplemd/issues
license:             MIT
license-file:        LICENSE
author:              Xiangdong Zeng, Xuyang Duan
maintainer:          xdzeng96@gmail.com
copyright:           Copyright (c) 2019 Xiangdong Zeng and Xuyang Duan
extra-source-files:  README.md
                   , static/simplemd.css
                   , static/index.html

library
  exposed-modules:   Html
                   , Parse
                   , Emoji
  hs-source-dirs:    src
  build-depends:     base ^>=4.12.0.0
                   , containers
                   , directory
                   , raw-strings-qq
                   , regex-compat-tdfa
  default-language:  Haskell2010

executable simplemd
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Gui
                   , Html
                   , Parse
                   , Emoji
                   , Svg
  build-depends:     base ^>=4.12.0.0
                   , containers
                   , directory
                   , pretty-simple
                   , raw-strings-qq
                   , regex-compat-tdfa
                   , threepenny-gui
  default-language:  Haskell2010

test-suite test-simplemd
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Test.hs
  build-depends:     base ^>=4.12.0.0
                   , HUnit
                   , simplemd
  default-language:  Haskell2010
